# Mewsic-Maid

./: README.md  log.md  pyproject.toml  requirements.txt  test.py
mewsic_maid/: README.md  main.py  mewsicmaid.tcss  pyproject.toml
mewsic_maid/Tui/: textual_main.py
mewsic_maid/Tui/ptmv/: sendVid.py
mewsic_maid/Tui/ptmv/sources/: console.py  snd.py  vid.py
src/: textual-main.py
src/Constants/: ascii_art.py
src/Core/: core.py
src/Tui/: textual-main.py
src/Tui/ptmv/: __main__.py
src/Tui/ptmv/sources/: vid.py
