[project]
name = "mewsic_maid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
    "textual>=3.0.1",
    "yt-dlp>=2025.3.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
